--- a/apps/kustomization.yaml
+++ b/apps/kustomization.yaml
@@ -1,8 +1,5 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-resources: []
-  # We will uncomment these as we build them out
-  # - controllers
-  # - networking
-  # - storage
+resources:
+  - podinfo
