feat: use chart for webhook

--- a/infrastructure/controllers/metallb/release.yaml
+++ b/infrastructure/controllers/metallb/release.yaml
@@ -19,5 +19,7 @@ spec:
     createNamespace: true
   values:
     # Minimal config to get it running
+    controller:
+      webhookMode: enabled
     speaker:
       tolerateMaster: true
