feat: add certmanager

--- a/infrastructure/configs/gateway/gateway.yaml
+++ b/infrastructure/configs/gateway/gateway.yaml
@@ -12,3 +12,14 @@ spec:
       allowedRoutes:
         namespaces:
           from: All
+    - name: https
+      protocol: HTTPS
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+          - kind: Secret
+            name: wildcard-c-va1-uk-tls
+      allowedRoutes:
+        namespaces:
+          from: All
