--- a/infrastructure/kustomization.yaml
+++ b/infrastructure/kustomization.yaml
@@ -3,6 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - controllers/metallb
+  - controllers/cert-manager
   - controllers/gateway-api
   - controllers/nginx-gateway
   # - networking
