chore: use staging for testing

--- a/infrastructure/configs/cert-manager/issuer.yaml
+++ b/infrastructure/configs/cert-manager/issuer.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   acme:
     email: admin@va1.uk
-    server: https://acme-v02.api.letsencrypt.org/directory
+    # server: https://acme-v02.api.letsencrypt.org/directory
+    server: https://acme-staging-v02.api.letsencrypt.org/directory # staging
     privateKeySecretRef:
       name: letsencrypt-dns
     solvers:
