chore: add sops decryption to infrastructure-configs

--- a/clusters/production/configs.yaml
+++ b/clusters/production/configs.yaml
@@ -5,6 +5,10 @@ metadata:
   name: infrastructure-configs
   namespace: flux-system
 spec:
+  decryption:
+    provider: sops
+    secretRef:
+      name: sops-age
   interval: 1m0s
   path: ./infrastructure/configs
   sourceRef:
