--- a/infrastructure/controllers/cert-manager/release.yaml
+++ b/infrastructure/controllers/cert-manager/release.yaml
@@ -19,3 +19,6 @@ spec:
     createNamespace: true
   values:
     installCRDs: true
+    extraArgs:
+      - --dns01-recursive-nameservers=1.1.1.1:53,1.0.0.1:53
+      - --dns01-recursive-nameservers-only
