--- a/infrastructure/configs/cert-manager/certificate.yaml
+++ b/infrastructure/configs/cert-manager/certificate.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: wildcard-c-va1-uk
+  name: wildcard-va1-uk
   namespace: ingress-gateway
 spec:
   secretName: wildcard-va1-uk-tls
