--- a/apps/podinfo/deployment.yaml
+++ b/apps/podinfo/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: podinfo
+  labels:
+    gateway-access: shared
 ---
 # 1. Standard Deployment
 apiVersion: apps/v1
@@ -23,9 +25,29 @@ spec:
     spec:
       containers:
         - name: podinfo
-          image: stefanprodan/podinfo
+          image: stefanprodan/podinfo:6.6.1
           ports:
-            - containerPort: 9898
+            - name: http
+              containerPort: 9898
+          readinessProbe:
+            httpGet:
+              path: /readyz
+              port: 9898
+            initialDelaySeconds: 5
+            periodSeconds: 5
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 9898
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
+            limits:
+              cpu: 500m
+              memory: 256Mi
 ---
 # 2. Standard Service
 apiVersion: v1
