--- a/infrastructure/configs/gateway/certificates.yaml
+++ b/infrastructure/configs/gateway/certificates.yaml
@@ -46,6 +46,7 @@ spec:
   usages:
     - digital signature
     - key encipherment
+    - server auth
   dnsNames:
     - ngf-nginx-gateway-fabric.nginx-gateway.svc # this value may need to be updated
   issuerRef:
@@ -60,8 +61,9 @@ metadata:
 spec:
   secretName: agent-tls
   usages:
-    - "digital signature"
-    - "key encipherment"
+    - digital signature
+    - key encipherment
+    - client auth
   dnsNames:
     - "*.cluster.local"
   issuerRef:
